forgot we're not using a smart language

--- a/emailops-build/roles/build-zimbra/tasks/common/cos.yml
+++ b/emailops-build/roles/build-zimbra/tasks/common/cos.yml
@@ -16,3 +16,6 @@
     zimbraFeatureConfirmationPageEnabled TRUE zimbraFeatureIMEnabled FALSE zimbraFeatureMAPIConnectorEnabled FALSE zimbraFeatureMobileSyncEnabled FALSE zimbraFeatureMobilePolicyEnabled FALSE
     zimbraFeatureSkinChangeEnabled TRUE"
   with_items: cos_listing.stdout_lines
+  become: yes
+  become_user: zimbra
+  become_method: sudo
