--- a/emailops-build/roles/build-zimbra/tasks/pop/proxy.yml
+++ b/emailops-build/roles/build-zimbra/tasks/pop/proxy.yml
@@ -5,10 +5,15 @@
 ---
 - name: (POSTINSTALL) Configure Zimbra for reverse proxying (server config)
   command: "{{ install_dir }}/bin/zmprov ms {{ hostvars['{{ inventory_hostname }}'] }} zimbraMailReferMode reverse-proxied -zimbraReverseProxyImapStartTlsMode on -zimbraReverseProxyImapStartTlsMode off
-    -zimbraReverseProxyImapStartTlsMode only zimbraImapBindPort 7143 zimbraImapProxyBindPort 143 zimbraImapSSLBindPort 7993 zimbraImapSSLProxyBindPort 993
-    -zimbraReverseProxyPop3StartTlsMode on -zimbraReverseProxyPop3StartTlsMode off -zimbraReverseProxyPop3StartTlsMode only
-    zimbraPop3BindPort 7110 zimbraPop3ProxyBindPort 110 zimbraPop3SSLBindPort 7995 zimbraPop3SSLProxyBindPort 995
+    -zimbraReverseProxyImapStartTlsMode only zimbraImapBindPort 7143 zimbraImapProxyBindPort 143 zimbraImapSSLBindPort 7993 zimbraImapSSLProxyBindPort 993 -zimbraReverseProxyPop3StartTlsMode on
+    -zimbraReverseProxyPop3StartTlsMode off -zimbraReverseProxyPop3StartTlsMode only zimbraPop3BindPort 7110 zimbraPop3ProxyBindPort 110 zimbraPop3SSLBindPort 7995 zimbraPop3SSLProxyBindPort 995
     -zimbraImapCleartextLoginEnabled TRUE -zimbraImapCleartextLoginEnabled FALSE -zimbraPop3CleartextLoginEnabled TRUE -zimbraPop3CleartextLoginEnabled FALSE"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
 
 - name: (POSTINSTALL) Configure Zimbra for reverse proxying (global config)
   command: "{{ install_dir }}/bin/zmprov mcf zimbraReverseProxyImapStartTlsMode on zimbraReverseProxyPop3StartTlsMode on zimbraImapCleartextLoginEnabled TRUE zimbraPop3CleartextLoginEnabled TRUE"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
