--- a/emailops-build/roles/build-zimbra/tasks/maildrop/createaccounts.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/createaccounts.yml
@@ -7,15 +7,30 @@
 - name: (POSTINSTALL) Get Zimbra account settings
   command: "{{ install_dir }}/bin/zimbraMailHost {{ hostvars[inventory_hostname] }} zimbraPrefGroupMailBy message zimbraPrefComposeFormat html"
   register: account_settings
+  become: yes
+  become_user: zimbra
+  become_method: sudo
 
 - name: (POSTINSTALL) Create accounts
   command: "{{ install_dir }}/bin/zmprov ca synoc{{ maildrop_number }}@{{ domain }} {{ synoc_pass }} {{ account_settings }}"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
 
 - name: (POSTINSTALL) Create accounts
   command: "{{ install_dir }}/bin/zmprov ca synoc{{ maildrop_number }}@{{ domain }} {{ synoc_pass }} {{ account_settings }}"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
 
 - name: (POSTINSTALL) Create accounts
   command: "{{ install_dir }}/bin/zmprov ca synoc{{ maildrop_number }}@{{ domain }} {{ synoc_pass }} {{ account_settings }}"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
 
 - name: (POSTINSTALL) Create accounts
   command: "{{ install_dir }}/bin/zmprov ca synoc{{ maildrop_number }}@{{ domain }} {{ synoc_pass }} {{ account_settings }}"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
