--- a/emailops-build/roles/build-zimbra/tasks/maildrop/scality.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/scality.yml
@@ -56,14 +56,23 @@
 - name: (POSTINSTALL) Configuring Zimbra for Scality use (local config)
   command: "{{ install_dir }}/bin/zmlocalconfig -e zimbra_class_store=com.scality.zimbra.cs.store.ScalitySproxydStoreManager
     external_store_local_cache_max_files=25000 external_store_local_cache_max_bytes=21474836480"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
   when: zimbra_major_version == 8
 
 - name: (POSTINSTALL) Configuring Zimbra for Scality use (server config)
   command: "{{ install_dir }}/bin/zmprov ms {{ hostvars['{{ inventory_hostname }}'] }} zimbraMessageCacheSize 10000 zimbraMailFileDecommandorCacheSize 20000 -zimbraBackupSkipBlobs TRUE
     -zimbraBackupSkipBlobs FALSE -zimbraBackupSkipHsmBlobs TRUE -zimbraBackupSkipHsmBlobs FALSE -zimbraMailboxMoveSkipBlobs TRUE -zimbraMailboxMoveSkipBlobs FALSE -zimbraMailboxMoveSkipHsmBlobs TRUE
     -zimbraMailboxMoveSkipHsmBlobs FALSE"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
   when: zimbra_major_version == 8
 
 - name: (POSTINSTALL) Configuring Zimbra for Scality use (global config)
   command: "{{ install_dir }}/bin/zmprov mcf zimbraBackupSkipBlobs TRUE zimbraBackupSkipHsmBlobs TRUE zimbraMailboxMoveSkipBlobs TRUE zimbraMailboxMoveSkipHsmBlobs
     zimbraMailEmptyFolderBatchSize 100 zimbraMailPurgeBatchSize 100"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
