--- a/emailops-build/roles/build-zimbra/vars/main.yml
+++ b/emailops-build/roles/build-zimbra/vars/main.yml
@@ -34,3 +34,10 @@ smtp_host: "mailrelay.{{ client_name }}.{{ datacenter }}.synacor.com"
 smtp_source:
 smtp_dest:
 email_dest: khuntly@synacor.com
+
+##
+## custom skins/zimlets as necessary
+##
+customizations:
+  - zimlet1
+  - skin1
