--- a/emailops-build/roles/build-ecelerity/tasks/run-postinstall.yml
+++ b/emailops-build/roles/build-ecelerity/tasks/run-postinstall.yml
@@ -1,5 +1,5 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  run-postinstall.yml
+#          NAME:  build-ecelerity/tasks/run-postinstall.yml
 #   DESCRIPTION:  Perform post-installation configuration
 #==============================================================================
 ---
