--- a/emailops-build/roles/build-nginx/tasks/run-installation.yml
+++ b/emailops-build/roles/build-nginx/tasks/run-installation.yml
@@ -1,5 +1,5 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  run-installation.yml
+#          NAME:  build-nginx/tasks/run-installation.yml
 #   DESCRIPTION:  Perform software installation
 #==============================================================================
 ---
