--- a/emailops-build/roles/build-ecelerity/tasks/apply-configuration.yml
+++ b/emailops-build/roles/build-ecelerity/tasks/apply-configuration.yml
@@ -1,5 +1,5 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  apply-configuration.yml
+#          NAME:  build-ecelerity/tasks/apply-configuration.yml
 #   DESCRIPTION:  Perform post-installation configuration
 #==============================================================================
 ---
@@ -13,38 +13,38 @@
   template:
     src=eccluster.j2
     dest="/opt/msys/ecelerity/etc/conf/global"
-    owner="{{ file_owner }}"
-    group="{{ group_owner }}"
+    owner="{{ user_name }}"
+    group="{{ group_name }}"
     mode=0644
 
 - name: (POST-INSTALL) Create ecelerity-cluster.conf
   template:
     src=ecelerity-cluster.j2
     dest="/opt/msys/ecelerity/etc/conf/global"
-    owner="{{ file_owner }}"
-    group="{{ group_owner }}"
+    owner="{{ user_name }}"
+    group="{{ group_name }}"
     mode=0644
 
 - name: (POST-INSTALL) Create ecelerity.conf
   template:
     src=ecelerity.j2
     dest="/opt/msys/ecelerity/etc/conf/global"
-    owner="{{ file_owner }}"
-    group="{{ group_owner }}"
+    owner="{{ user_name }}"
+    group="{{ group_name }}"
     mode=0644
 
 - name: (POST-INSTALL) Create client_vars.siv
   template:
     src=client_vars.j2
     dest="/opt/msys/ecelerity/etc/conf/default/siv"
-    owner="{{ file_owner }}"
-    group="{{ group_owner }}"
+    owner="{{ user_name }}"
+    group="{{ group_name }}"
     mode=0600
 
 - name: (POST-INSTALL) Create auth.lua
   template:
     src=auth.j2
     dest="/opt/msys/ecelerity/etc/conf/default/lua"
-    owner="{{ file_owner }}"
-    group="{{ group_owner }}"
+    owner="{{ user_name }}"
+    group="{{ group_name }}"
     mode=0644
