--- a/emailops-build/roles/build-ecelerity/tasks/main.yml
+++ b/emailops-build/roles/build-ecelerity/tasks/main.yml
@@ -1,5 +1,5 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  main.yml
+#          NAME:  build-ecelerity/tasks/main.yml
 #   DESCRIPTION:  Primary entry point for play
 #==============================================================================
 ---
