--- a/emailops-build/roles/build-ecelerity/vars/main.yml
+++ b/emailops-build/roles/build-ecelerity/vars/main.yml
@@ -1,14 +1,24 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  vars/mta.yml
+#          NAME:  build-ecelerity/vars/main.yml
 #   DESCRIPTION:  Variables that apply to Mail Transport Agent servers
 #==============================================================================
 ---
-## These variables will be used to generate the unattended installation options file
-## Change to suit environment
+##
+## accounting
+##
+group_id: 454
+group_name: ecuser
+addl_groups: 
+home_dir: /opt/home/ecuser
+user_name: ecuser
+user_shell: /bin/bash
+user_uid: 454
+
+##
+## template updates
+##
 manager_hostname: "ecmgr01.{{ client_name }}.{{ datacenter }}.synacor.com"
 manager_ipaddr: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
-file_owner: ecuser
-group_owner: ecuser
 cluster_group: ec_cluster
 control_group: ec_cosole
 
