--- a/emailops-build/roles/build-nginx/handlers/main.yml
+++ b/emailops-build/roles/build-nginx/handlers/main.yml
@@ -1,5 +1,5 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  handlers/main.yml
+#          NAME:  build-nginx/handlers/main.yml
 #   DESCRIPTION:  Service restart handler
 #==============================================================================
 ---
