--- a/emailops-build/roles/build-zimbra/tasks/ldap/multimaster.yml
+++ b/emailops-build/roles/build-zimbra/tasks/ldap/multimaster.yml
@@ -8,19 +8,16 @@
 ##
 - name: (POSTINSTALL) Promote node to master
   command: "{{ install_dir }}/libexec/zmldappromote-replica-mmr -s {{ ldap_rid }}"
-  when: not is_master_ldap
+  when: promote
   become: yes
   become_user: zimbra
   become_method: sudo
 
+##
+## this needs to be done on EVERY host
+##
 - name: (POSTINSTALL) Enable multi-master LDAP replication (zmldapenable-mmr)
   command: "{{ install_dir }}/libexec/zmldapenable-mmr -s {{ ldap_rid }} -m \"ldap://{{ hostvars[inventory_hostname]['ansible_fqdn'] }}:389/\""
-  become: yes
-  become_user: zimbra
-  become_method: sudo
-
-- name: (POSTINSTALL) Enable multi-master LDAP replication (local config)
-  command: "{{ install_dir }}/bin/zmlocalconfig -e ldap_master_url=\"{{ ldap_master_url }}\" ldap_url=\"{{ ldap_url }}\""
   become: yes
   become_user: zimbra
   become_method: sudo
