--- a/emailops-build/roles/build-zimbra/tasks/maildrop/storeconfig.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/storeconfig.yml
@@ -1,22 +1,34 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  vars/maildrop.yml
-#   DEcommandION:  Variables that apply to Zimbra maildrop installations
+#          NAME:  build-zimbra/tasks/maildrop/store-config.yml
+#   DESCRIPTION:  Variables that apply to Zimbra maildrop installations
 #==============================================================================
 ---
 - name: (POSTINSTALL) Configure server stores (fstore)
   command: "mkdir {{ install_dir }}/fstore"
 
 - name: (POSTINSTALL) Modify store permissions (fstore)
-  command: "chown {{ file_owner }}:{{ group_owner }} {{ install_dir }}/fstore"
+  command: "chown {{ user_name }}:{{ group_name }} {{ install_dir }}/fstore"
 
 - name: (POSTINSTALL) Notify Zimbra of store (primary)
   command: "{{ install_dir }}/bin/zmvolume --add --name fstore --type primaryMessage --compress false --path {{ install_dir }}/fstore"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
 
 - name: (POSTINSTALL) Notify Zimbra of store (primary)
   command: "{{ install_dir }}/bin/zmvolume --id 3 --setCurrent"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
 
 - name: (POSTINSTALL) Notify Zimbra of store (secondary)
   command: "{{ install_dir }}/bin/zmvolume --edit --id 1 --type secondaryMessage --compress true"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
 
 - name: (POSTINSTALL) Notify Zimbra of store (secondary)
   command: "{{ install_dir }}/bin/zmvolume --setCurrent --id 1"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
