--- a/emailops-build/roles/build-zimbra/tasks/main.yml
+++ b/emailops-build/roles/build-zimbra/tasks/main.yml
@@ -3,19 +3,8 @@
 #   DESCRIPTION:  Entry point for the Zimbra build play
 #==============================================================================
 ---
-- name: (MAIN) Run pre-installation steps
-  include: run-preinstall.yml
-
 - name: (MAIN) Run Zimbra installation steps
-  include: run-installation.yml
-  notify:
-    - sync puppet
-    - restart service
-
-- meta: flush_handlers
+  include: run-install.yml
 
 - name: (MAIN) Run Zimbra post-installation
   include: run-postinstall.yml
-  notify:
-    - sync puppet
-    - restart service
