--- a/emailops-build/site.yml
+++ b/emailops-build/site.yml
@@ -1,5 +1,5 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  playbook.yml
+#          NAME:  site.yml
 #   DESCRIPTION:  Entry point for all plays within this playbook
 #==============================================================================
 ---
