No time to commit.. My people need me!

--- a/emailops-build/roles/build-ecelerity/tasks/apply-configuration.yml
+++ b/emailops-build/roles/build-ecelerity/tasks/apply-configuration.yml
@@ -48,3 +48,12 @@
     owner="{{ user_name }}"
     group="{{ group_name }}"
     mode=0644
+
+- name: (POSTINSTALL) Copy sysctl configuration
+  copy:
+    src="10-ecelerity.conf"
+    dest="/etc/sysctl.d/10-ecelerity.conf"
+    owner="root"
+    group="root"
+    mode=0644
+
